# easy-config-wizard

./: Cargo.toml
docs/: docs.txt
src/: main.rs
ui/: appwindow.slint  sidebar.slint
ui/pages/: welcome.slint
